# fastapi-best-practices

./: README.md  config.dev.yaml  pyproject.toml
src/: config.py  main.py
